Fix some layout issues
Navbar spacing & elements alignment, project card buttons styling & some elements compatibility with datk/ light mode

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,4 +17,9 @@
     .customized-checkbox {
         background-color: var(--bs-black);
     }
+
+    // make the carousel controls visible on light mode
+    .carousel-control-prev-icon, .carousel-control-next-icon {
+        background-color: var(--bs-black);
+    }
 }
